--- a/lesson2/css/lesson2medium.css
+++ b/lesson2/css/lesson2medium.css
@@ -1,37 +1,27 @@
-@media only screen and (min-width: 32.5em) {
+@media only screen and (min-width: 550px) {
   #content,
   nav,
   header {
-    box-shadow: -10px 15px 5px rgba(120, 120, 120.5),
-      10px 15px 5px rgba(120, 120, 120.5);
     max-width: 960px;
   }
 
-  nav ul {
-    grid-template-rows: unset;
-    grid-template-columns: 0.75fr 1fr 1.25fr;
-  }
-
   .image-grid {
-      grid-template-rows: unset;
-        grid-template-columns: repeat(3, 1fr);
+      grid-template-rows: repeat(2,450px);
+      grid-template-columns: repeat(2, 1fr);
     }
 
-  #nav-link1,
-  .img1 {
-      grid-row: unset;
+  .img1 { 
+    grid-row: 1/2;
     grid-column: 1/2;
   }
 
-  #nav-link2,
-  .img2 {
-    grid-row: unset;
+  .img2{
+    grid-row: 1/2;
     grid-column: 2/3;
   }
 
-  #nav-link3,
-  .img3 {
-    grid-row: unset;
-    grid-column: 3/4;
+  .img3{
+    grid-row: 2/3;
+    grid-column: 1/3;
   }
 }
