--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -1,5 +1,5 @@
 @media only screen and (min-width: 550px) {
-    header, nav, main, footer {
+    header, nav, main, footer, #info-banner {
         max-width: 960px;
       }
 
