--- a/lesson5/css/medium.css
+++ b/lesson5/css/medium.css
@@ -1,7 +1,8 @@
-@media only screen and (min-width: 550px) {
+@media only screen and (min-width: 45em) {
     header, nav, main, footer, #info-banner {
         max-width: 960px;
       }
+      
 
       #article {
           display: grid;
