--- a/lesson6/css/large.css
+++ b/lesson6/css/large.css
@@ -1,12 +1,12 @@
 @media only screen and (min-width: 60em) {
     #banner {
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    grid-template-columns: repeat(5,1fr);
     grid-template-rows: auto;
 }
 
 #banner #summary {
-    grid-column: 1/2;
+    grid-column: 1/3;
     margin: 2em 2em 12em 2em;
     grid-row: 1/2;
     background-color: rgba(238,232,236, .7) ;
@@ -16,4 +16,13 @@
     grid-column: 1/-1;
     grid-row: 1/2;
 }
+
+#forecast-imgs div{
+    width: 12em;
+}
+
+#article img {
+   margin: 1em .5em;
+   border-radius: 5px;
+ }
 }
