--- a/lesson6/css/standard.css
+++ b/lesson6/css/standard.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lexend+Giga&family=Special+Elite&display=swap');
 
+/*************************************************
+*** 
+***     MAIN/GENERAL CONTENT Rules
+***
+*************************************************/
+
 header, nav, main, footer, #info-banner {
     margin: 0 auto;
 }
@@ -7,6 +13,81 @@ header, nav, main, footer, #info-banner {
 main {
     max-width: 100%;
 }
+
+/*************************************************
+*** 
+***     Font Rules
+***
+*************************************************/
+
+p, #info-banner, email {
+    font-family: 'Lexend Giga', Georgia, serif;
+    line-height: 1.25em;
+}
+
+header h1, nav ul, h2 {
+    font-family: 'Special ELite', monospace;
+}
+
+footer p, email {
+    color: #EEE8EC;
+}
+
+/*************************************************
+*** 
+***     IMAGES/PICTURES Rules
+***
+*************************************************/
+
+footer img {
+    max-width: 100%;
+}
+
+#forecast-imgs img{
+    margin: 16px auto 8px auto;
+}
+
+header img {
+    max-width: 20%;
+}
+
+#banner picture, #banner source, #banner img {
+    min-width: 100%;
+    max-width: 100%;
+}
+
+#article img {
+   margin: 1em 25%;
+   border-radius: 10px;
+}
+
+/*************************************************
+*** 
+***     Link Handling/Formatting Rules
+***
+*************************************************/
+
+a:hover {
+    color: #658361 ;
+    background-color: #FFB845;
+    border-radius: 4px;
+}
+
+footer a:hover {
+    background-color: #D0DD97;
+}
+
+nav a {
+    text-decoration: none;
+    color: #EEE8EC;    
+}
+
+.active a {
+    color: #470040;
+}
+
+/*************************************************/
+
 
 #info-banner {
     display: block;
@@ -21,18 +102,11 @@ header {
     align-items: center;
 }
 
-header h1, nav ul, h2 {
-    font-family: 'Special ELite', monospace;
-}
-
-#banner picture {
-    width: 100%;
-}
-
 #banner #summary {
     background-color: rgba(238,232,236, 1) ;
     margin: 1em 0;
     font-family: 'Lexend Giga', Georgia, serif;
+    border-radius: 15px;
 
 }
 
@@ -53,10 +127,6 @@ header h1{
     justify-content: center;
 }
 
-header img {
-    max-width: 20%;
-}
-
 .navigation {
     list-style: none;
     padding: 0;
@@ -64,10 +134,6 @@ header img {
 
 .navigation li:first-child {
     display:block;
-}
-
-.navigation li {
-    display: block;
 }
 
 .responsive li {
@@ -78,15 +144,6 @@ nav ul{
     margin: unset;
     list-style: none;
     font-size: 1.5em;
-}
-
-nav a {
-    text-decoration: none;
-    color: #EEE8EC;    
-}
-
-.active a {
-    color: #470040;
 }
 
 nav ul li {
@@ -101,6 +158,10 @@ h1, h2, h3, p {
     color: #470040;
 }
 
+#forecast {
+    max-width: 100%;
+}
+
 #forecast-imgs {
     display: flex;
     flex-direction: column;
@@ -112,21 +173,10 @@ h1, h2, h3, p {
 
 #forecast-imgs div {
     display: flex;
-    
     align-items: center;
     text-align: center;
 
 }
-
-#forecast-imgs img{
-    margin: 16px auto 8px auto;
-}
-
-p, #info-banner {
-    font-family: 'Lexend Giga', Georgia, serif;
-    line-height: 1.25em;
-}
-
 
 body {
     background-color: #D0DD97;
@@ -151,26 +201,5 @@ footer {
     max-width: 100%;
     padding: 2em;
     background-color: #658361;
-    
 }
-
-footer #contact {
-    float:right;
-}
-
-footer p {
-    color: #EEE8EC;
-}
-
-a:hover {
-    color: #658361 ;
-    background-color: #FFB845;
-    border-radius: 4px;
-}
-
-footer a:hover {
-    background-color: #D0DD97;
-}
-
-
 
