--- a/lesson7/css/gallery/gallery-large.css
+++ b/lesson7/css/gallery/gallery-large.css
@@ -1,11 +1,66 @@
-@media only screen and (min-width: 60em) {
-#gallery {
-    display: grid;
-    grid-template-columns: repeat(3,1fr);
-    grid-template-rows: repeat(3, auto);
-}
+@media only screen and (min-width: 65em) {
+  header,
+  nav,
+  main,
+  footer,
+  #info-banner {
+    max-width: 1080px;
+  }
 
-img:hover {
-    box-shadow: 5px 3px rgba(e0, ef, e0, 0.7);
-}
+  #gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    justify-items: center;
+    align-items: center;
+  }
+
+  #gallery div:hover {
+    box-shadow: 10px 12px 8px rgba(38, 39, 38, 0.6);
+  }
+
+  .gallery-1 {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+
+  .gallery-2 {
+    grid-row: 1/2;
+    grid-column: 2/3;
+  }
+  .gallery-3 {
+    grid-row: 1/2;
+    grid-column: 3/4;
+  }
+  .gallery-4 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+  .gallery-5 {
+    grid-row: 2/3;
+    grid-column: 2/3;
+  }
+  .gallery-6 {
+    grid-row: 2/3;
+    grid-column: 3/4;
+  }
+  .gallery-7 {
+    grid-row: 3/4;
+    grid-column: 1/2;
+  }
+
+  .gallery-8 {
+    grid-row: 3/4;
+    grid-column: 2/3;
+  }
+
+  .gallery-9 {
+    grid-row: 3/4;
+    grid-column: 3/4;
+  }
+
+  .gallery-10 {
+    grid-row: 4/5;
+    grid-column: 1/2;
+  }
 }
