--- a/lesson7/css/gallery/gallery-mobile.css
+++ b/lesson7/css/gallery/gallery-mobile.css
@@ -189,7 +189,7 @@ footer {
     max-width: 100%;
     background-color: #658361;
     display: grid;
-    grid-template-columns: repeat (2,1fr);
+    grid-template-columns: repeat (2, 1fr);
     justify-items: center;
     align-items: center;
 }
