--- a/lesson8/css/assignments/tablestyle.css
+++ b/lesson8/css/assignments/tablestyle.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,400;0,500;1,300;1,400;1,500&display=swap');
 
 table {
     display:table;
@@ -10,8 +10,9 @@ table {
     text-align: center;
 }
 
- th, td {
+th, td {
     padding: 5px;
+    /* line-height: 2rem; */
 }
 
 tbody {
@@ -25,6 +26,10 @@ tbody tr:nth-child(odd) {
 thead, tfoot {
     background-color: #7fb9c2;
     line-height: 2em;
+}
+
+td.goal-met {
+    background-color: #7fb9c2;
 }
 
 thead {
