--- a/lesson8/css/large.css
+++ b/lesson8/css/large.css
@@ -3,26 +3,102 @@
     display: grid;
     grid-template-columns: repeat(5,1fr);
     grid-template-rows: auto;
-}
+    }
 
 #banner #summary {
     grid-column: 1/3;
     margin: 2em 2em 12em 2em;
     grid-row: 1/2;
     background-color: rgba(238,232,236, .7) ;
-}
+    }
 
 #banner picture {
     grid-column: 1/-1;
     grid-row: 1/2;
-}
+    }
 
 #forecast-imgs div{
     width: 12em;
-}
+    }
 
 #article img {
    margin: 1em .5em;
    border-radius: 5px;
  }
+
+ form label.sbs {
+    padding: .4rem 0;
+    
+}
+
+/****************************************
+    ***
+    ***   Gallery
+    ***
+    *****************************************/
+
+#gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, auto);
+    justify-items: center;
+    align-items: center;
+  }
+
+  #gallery div:hover {
+    box-shadow: 10px 12px 8px rgba(38, 39, 38, 0.6);
+  }
+
+  .gallery-1 {
+    grid-row: 1/2;
+    grid-column: 1/2;
+  }
+
+  .gallery-2 {
+    grid-row: 1/2;
+    grid-column: 2/3;
+  }
+  .gallery-3 {
+    grid-row: 1/2;
+    grid-column: 3/4;
+  }
+  .gallery-4 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+  }
+  .gallery-5 {
+    grid-row: 2/3;
+    grid-column: 2/3;
+  }
+  .gallery-6 {
+    grid-row: 2/3;
+    grid-column: 3/4;
+  }
+  .gallery-7 {
+    grid-row: 3/4;
+    grid-column: 1/2;
+  }
+
+  .gallery-8 {
+    grid-row: 3/4;
+    grid-column: 2/3;
+  }
+
+  .gallery-9 {
+    grid-row: 3/4;
+    grid-column: 3/4;
+  }
+
+  .gallery-10 {
+    grid-row: 4/5;
+    grid-column: 1/2;
+  }
+
+
+  /*************************************/
+
+  header, nav, main, footer, #info-banner {
+    max-width: 1080px;
+}
+
 }
