--- a/lesson8/css/medium.css
+++ b/lesson8/css/medium.css
@@ -27,6 +27,79 @@
             grid-row: 2/3;
         }
 
+
+    /****************************************
+    ***
+    ***     Gallery
+    ***
+    *****************************************/
+
+    #gallery {
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        grid-template-rows: repeat(5, auto);
+        gap: 2em;
+        justify-items: center;
+        align-items: center;
+        margin-bottom: 2em;
+        text-align: center;
+    }
+
+   
+
+    #map {
+        grid-column: 1/2;
+    }
+
+    #contact {
+        grid-column: 2/3;
+    }
+
+    .gallery-1 {
+        grid-row: 1/2;
+        grid-column: 1/2;
+      }
+    
+      .gallery-2 {
+        grid-row: 1/2;
+        grid-column: 2/3;
+      }
+      .gallery-3 {
+        grid-row: 2/3;
+        grid-column: 1/2;
+      }
+      .gallery-4 {
+        grid-row: 2/3;
+        grid-column: 2/3;
+      }
+      .gallery-5 {
+        grid-row: 3/4;
+        grid-column: 1/2;
+      }
+      .gallery-6 {
+        grid-row: 3/4;
+        grid-column: 2/3;
+      }
+      .gallery-7 {
+        grid-row: 4/5;
+        grid-column: 1/2;
+      }
+    
+      .gallery-8 {
+        grid-row: 4/5;
+        grid-column: 2/3;
+      }
+    
+      .gallery-9 {
+        grid-row: 5/6;
+        grid-column: 1/2;
+      }
+    
+      .gallery-10 {
+        grid-row: 5/6;
+        grid-column: 2/3;
+      }
+
     /******************************************/
      
     
@@ -65,7 +138,7 @@
 
       #contact {
         float:right;
-        max-width: 50%;
+        max-width: 45%;
       }
 
 }
