commit for week 6 fixes

--- a/lesson8/css/standard.css
+++ b/lesson8/css/standard.css
@@ -39,11 +39,6 @@ footer p, email {
 ***
 *************************************************/
 
-footer img {
-    max-width: 45%;
-    margin: 1.5em;
-}
-
 #forecast-imgs img{
     margin: 16px auto 8px auto;
 }
@@ -314,14 +309,16 @@ nav {
 footer {
     max-width: 100%;
     background-color: #658361;
+    text-align: center;
+
 }
 
 #map {
-    /* max-width: 45%; */
+    
+    place-self: center;
 }
 
 #contact {
-    margin: 1vh 1em;
-    /* max-width: 45%; */
+    place-self: center;
 }
 
