--- a/lesson8/css/medium.css
+++ b/lesson8/css/medium.css
@@ -45,15 +45,6 @@
         text-align: center;
     }
 
-   
-
-    #map {
-        grid-column: 1/2;
-    }
-
-    #contact {
-        grid-column: 2/3;
-    }
 
     .gallery-1 {
         grid-row: 1/2;
@@ -100,6 +91,28 @@
         grid-column: 2/3;
       }
 
+    /****************************************
+    ***
+    ***     Footer formatting
+    ***
+    *****************************************/
+    footer {
+        display: grid;
+        max-width: 100%;
+        background-color: #658361;
+        grid-template-columns: 1fr 1fr;
+    }
+
+
+    #map {
+        grid-column: 1/2;
+    }
+
+    #contact {
+        grid-column: 2/3;
+    }
+
+
     /******************************************/
      
     
@@ -136,9 +149,7 @@
         grid-template-columns: repeat(5,1fr);
       }
 
-      #contact {
-        float:right;
-        max-width: 45%;
-      }
+      
+    
 
 }
