--- a/lesson9/css/prophets.css
+++ b/lesson9/css/prophets.css
@@ -48,7 +48,21 @@ section img {
 .cards {
     
     display: grid;
-    grid-template-columns: repeat(4,1fr);
     grid-gap: 15px;
     /* justify-items: center; */
+}
+
+@media only screen and (min-width: 45em) {
+
+    .cards {
+        grid-template-columns: repeat(2, 1fr);
+    }
+
+}
+
+@media only screen and (min-width: 60em) {
+    
+    .cards {
+        grid-template-columns: repeat(4, 1fr);
+    }
 }
