Incomplete final submission

--- a/css/weathersite/medium.css
+++ b/css/weathersite/medium.css
@@ -154,4 +154,13 @@
         grid-template-columns: repeat(5,1fr);
       }
 
+      @media only screen and (min-width: 45em) {
+
+        .cards {
+            grid-template-columns: repeat(2, 1fr);
+        }
+    
+    }
+
+
 }
